<resources>
    <string name="app_name">Tasbeeh</string>
    <string name="preference_file_key">tasbeeh.mkhan</string>
    <string name="counter_value">counter_value</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_goal">Goal (Max 99999999999)</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">0</string>
    <integer name="pref_default_display_name_int">0</integer>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_background_title">Background Color</string>


    <string-array name="pref_backgrnd_color_titles">
        <item>Yellow</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>White</item>
        <item>Purple</item>
    </string-array>
    <string-array name="pref_backgrnd_color_values">
        <item>#cca300</item>
        <item>#000000</item>
        <item>#ff3300</item>
        <item>#1b62d3</item>
        <item>#bf8040</item>
        <item>#ffffff</item>
        <item>#e600e6</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_goal_key">pref_goal_key</string>
    <string name="pref_background_color">pref_background_color</string>
    <string name="pref_text_color_title">Dark Text</string>
    <string name="pref_text_color">pref_text_color</string>
    <string name="pref_vibrate">pref_vibrate</string>
    <string name="pref_vibrate_text">Vibrate</string>

    <string name="tasbeeh_prompt">Choose a Tasbeeh for Dhikr</string>

    <string-array name="tasbeeh_arrays">
        <item>Allāhu ʾAkbar\n الله أَكْبَر</item>
        <item>Subḥan Allāh سبحان الله‎</item>
        <item>Al-ḥamdu lillāh الحَمْدُ ِلله</item>
        <item>Lā ʾilāha ʾillā llah لا إله إلا الله</item>
        <item>Lā ḥawla wa-lā quwwata ʾillā bi-llāh لا حول ولاقوة إلا بالله</item>
    </string-array>
    <string name="play_notification_on_goal_complete">play_notification_on_goal_complete</string>

</resources>
