<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="number"
        android:key="@string/pref_goal_key"
        android:maxLines="1"
        android:maxLength="11"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_header_goal"
        />


    <ListPreference
        android:defaultValue="#000000"
        android:entries="@array/pref_backgrnd_color_titles"
        android:entryValues="@array/pref_backgrnd_color_values"
        android:key="@string/pref_background_color"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_background_title" />

    <SwitchPreference
        android:key="@string/pref_text_color"
        android:title="@string/pref_text_color_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="@string/pref_vibrate"
        android:title="@string/pref_vibrate_text"
        android:defaultValue="true" />

</PreferenceScreen>
